--- a/Pandas/Pandas Getting Started.ipynb
+++ b/Pandas/Pandas Getting Started.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 305,
    "metadata": {
     "collapsed": false
    },
@@ -246,10 +246,10 @@
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 4, 5, 6, 7, 8]"
+       "[1, 3, 5, 7, 9, 11, 13, 15]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 305,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 261,
    "metadata": {
     "collapsed": true
    },
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 262,
    "metadata": {
     "collapsed": false
    },
@@ -1095,7 +1095,7 @@
        "1   2   4   6   8  10  12  14  16  18  20  22  24  26  28  30"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 264,
    "metadata": {
     "collapsed": false
    },
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 265,
    "metadata": {
     "collapsed": false
    },
@@ -1233,7 +1233,7 @@
        "14    15    30"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 266,
    "metadata": {
     "collapsed": false
    },
@@ -1255,7 +1255,7 @@
        "Index([u'col1', u'col2'], dtype='object')"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 267,
    "metadata": {
     "collapsed": false
    },
@@ -1277,7 +1277,7 @@
        "Int64Index([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], dtype='int64')"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 268,
    "metadata": {
     "collapsed": false
    },
@@ -1314,7 +1314,7 @@
        "Name: col1, dtype: int64"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 269,
    "metadata": {
     "collapsed": false
    },
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 270,
    "metadata": {
     "collapsed": false
    },
@@ -1380,7 +1380,7 @@
        "2     3  Pandas"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 271,
    "metadata": {
     "collapsed": false
    },
@@ -1405,7 +1405,7 @@
        "Name: col2, dtype: object"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 272,
    "metadata": {
     "collapsed": false
    },
@@ -1427,7 +1427,7 @@
        "'Save'"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 273,
    "metadata": {
     "collapsed": false
    },
@@ -1554,7 +1554,7 @@
        "14    15    30"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 274,
    "metadata": {
     "collapsed": true
    },
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 275,
    "metadata": {
     "collapsed": false
    },
@@ -1708,7 +1708,7 @@
        "14    15    30     1"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1719,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 276,
    "metadata": {
     "collapsed": false
    },
@@ -1730,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 277,
    "metadata": {
     "collapsed": false
    },
@@ -1878,7 +1878,7 @@
        "14    15    30     1    14"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1918,7 +1918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 284,
    "metadata": {
     "collapsed": true
    },
@@ -1929,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 285,
    "metadata": {
     "collapsed": false
    },
@@ -1940,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 286,
    "metadata": {
     "collapsed": false
    },
@@ -1985,7 +1985,7 @@
        "3 NaN"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1996,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 287,
    "metadata": {
     "collapsed": false
    },
@@ -2036,7 +2036,7 @@
        "2  3"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2047,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 288,
    "metadata": {
     "collapsed": false
    },
@@ -2083,7 +2083,7 @@
        "0  1  2  3 NaN"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2094,7 +2094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 289,
    "metadata": {
     "collapsed": false
    },
@@ -2124,7 +2124,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2135,7 +2135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 290,
    "metadata": {
     "collapsed": false
    },
@@ -2150,7 +2150,7 @@
        "Name: 0, dtype: float64"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 290,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2161,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 291,
    "metadata": {
     "collapsed": true
    },
@@ -2508,7 +2508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 294,
    "metadata": {
     "collapsed": true
    },
@@ -2519,7 +2519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 295,
    "metadata": {
     "collapsed": false
    },
@@ -2667,7 +2667,7 @@
        "14        15        30         1        14"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 295,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2705,7 +2705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 296,
    "metadata": {
     "collapsed": false
    },
@@ -2869,7 +2869,7 @@
        "14        15 NaN NaN NaN NaN"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2880,7 +2880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 297,
    "metadata": {
     "collapsed": false
    },
@@ -3028,7 +3028,7 @@
        "14        15        30         1        14"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3039,7 +3039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 298,
    "metadata": {
     "collapsed": false
    },
@@ -3115,7 +3115,7 @@
        "23       NaN       NaN       NaN       NaN"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 298,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3126,7 +3126,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 299,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df1 = pd.concat([dataframe1,dataframe1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
    "metadata": {
     "collapsed": false
    },
@@ -3394,13 +3405,316 @@
        "14        15        30         1        14"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.concat([dataframe1,dataframe1])"
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14    15\n",
+       "14    15\n",
+       "Name: Columna1, dtype: int64"
+      ]
+     },
+     "execution_count": 301,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['Columna1'][14]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Columna1</th>\n",
+       "      <th>Columna2</th>\n",
+       "      <th>Columna3</th>\n",
+       "      <th>Columna4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>6</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>8</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>9</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>10</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>11</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>12</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>13</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>14</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>15</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Columna1  Columna2  Columna3  Columna4\n",
+       "0          1         2         1         0\n",
+       "1          2         4         1         1\n",
+       "2          3         6         1         2\n",
+       "3          4         8         1         3\n",
+       "4          5        10         1         4\n",
+       "5          6        12         1         5\n",
+       "6          7        14         1         6\n",
+       "7          8        16         1         7\n",
+       "8          9        18         1         8\n",
+       "9         10        20         1         9\n",
+       "10        11        22         1        10\n",
+       "11        12        24         1        11\n",
+       "12        13        26         1        12\n",
+       "13        14        28         1        13\n",
+       "14        15        30         1        14\n",
+       "15         1         2         1         0\n",
+       "16         2         4         1         1\n",
+       "17         3         6         1         2\n",
+       "18         4         8         1         3\n",
+       "19         5        10         1         4\n",
+       "20         6        12         1         5\n",
+       "21         7        14         1         6\n",
+       "22         8        16         1         7\n",
+       "23         9        18         1         8\n",
+       "24        10        20         1         9\n",
+       "25        11        22         1        10\n",
+       "26        12        24         1        11\n",
+       "27        13        26         1        12\n",
+       "28        14        28         1        13\n",
+       "29        15        30         1        14"
+      ]
+     },
+     "execution_count": 303,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.set_index(np.arange(len(df1)))"
    ]
   },
   {
@@ -4390,7 +4704,7 @@
    "cell_type": "code",
    "execution_count": 154,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -4549,7 +4863,7 @@
    "cell_type": "code",
    "execution_count": 157,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
