--- a/Pandas/Challenge/Consumir json.ipynb
+++ b/Pandas/Challenge/Consumir json.ipynb
@@ -19,7 +19,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_json('https://api.sandbox.amadeus.com/v1.2/flights/low-fare-search?apikey=XO5B6yiAg1Jpq789CGo3ZWSPmabnH7tE&origin=BOS&destination=LON&departure_date=2016-01-25')"
+    "df = pd.read_json('https://api.sandbox.amadeus.com/v1.2/flights/low-fare-search?apikey={apiKey}&origin=BOS&destination=LON&departure_date=2016-01-25')"
    ]
   },
   {
