--- a/Pandas/Challenge/Ejercicio_chunks.ipynb
+++ b/Pandas/Challenge/Ejercicio_chunks.ipynb
@@ -51,7 +51,7 @@
    },
    "outputs": [],
    "source": [
-    "s = pd.read_csv('/home/dsc/Downloads/Basecamp Download/bookings.csv.bz2',sep='^',nrows=1e5, usecols=['arr_port','pax'])"
+    "s = pd.read_csv('/home/dsc/Downloads/Basecamp Download/bookings.csv.bz2',sep='^',nrows=0, usecols=['arr_port','pax'])"
    ]
   },
   {
