--- a/Spark/Dia 2/Ejemplo reduceByKey.ipynb
+++ b/Spark/Dia 2/Ejemplo reduceByKey.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -26,7 +26,7 @@
        " u'79062005924069,1,CJB,MAA,9W,9W,60.0,USD,1,H,H,2768,150721,OK,IAA0']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,6 +63,110 @@
    "source": [
     "### Ingreso total por aerolinea"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def getAlIng(l):\n",
+    "    elems = l.split(\",\")\n",
+    "    al = elems[4]\n",
+    "    ingreso = float(elems[6])\n",
+    "    return (al, ingreso)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(u'GA', 20712226.56999984),\n",
+       " (u'BA', 12443986.980000038),\n",
+       " (u'AF', 10221507.909999428),\n",
+       " (u'QF', 8358587.900000253),\n",
+       " (u'LH', 7715608.339999713),\n",
+       " (u'QR', 6935584.369999946),\n",
+       " (u'SV', 6286299.340001837),\n",
+       " (u'UA', 5151815.289999981),\n",
+       " (u'JJ', 5066300.509999913),\n",
+       " (u'AA', 4151996.4599999674)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ls.map(getAlIng).groupByKey().mapValues(lambda x: sum(x)).sortBy(lambda x: x[1], False).take(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(u'GA', 20712226.569999855),\n",
+       " (u'BA', 12443986.980000002),\n",
+       " (u'AF', 10221507.909999428),\n",
+       " (u'QF', 8358587.9000001205),\n",
+       " (u'LH', 7715608.339999718),\n",
+       " (u'QR', 6935584.369999997),\n",
+       " (u'SV', 6286299.340001843),\n",
+       " (u'UA', 5151815.29),\n",
+       " (u'JJ', 5066300.509999905),\n",
+       " (u'AA', 4151996.4599999613)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ls.map(getAlIng).reduceByKey(lambda e,acum: e+acum).sortBy(lambda x: x[1],False).take(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -243,6 +347,79 @@
    "source": [
     "### Top 5 de ingreso medio por pasajero con reduceByKey"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "grup = ls.map(getAlIng).map(lambda x: (x[0], (x[1],1))).reduceByKey(lambda x,acum: (x[0]+acum[0], x[1]+acum[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(u'S3', 5225.068852459017),\n",
+       " (u'9V', 1488.6739864864867),\n",
+       " (u'GA', 991.2527671691723),\n",
+       " (u'TN', 964.6472580645161),\n",
+       " (u'7F', 668.035)]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grup.mapValues(lambda x: x[0]/x[1]).sortBy(lambda x: x[1],False).take(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
