--- a/Spark/Dia 2/Intro Spark.ipynb
+++ b/Spark/Dia 2/Intro Spark.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +88,7 @@
        "[('Pepe', 'M', 32), ('Veronica', 'F', 37), ('Juan', 'M', 28)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,35 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import math"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[32, 37, 28]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[x[2] for x in ps]"
    ]
   },
   {
@@ -140,10 +118,32 @@
     {
      "data": {
       "text/plain": [
-       "32"
+       "[32, 37, 28]"
       ]
      },
      "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[x[2] for x in ps]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,8 +218,8 @@
     {
      "data": {
       "text/plain": [
-       "[('M', <pyspark.resultiterable.ResultIterable at 0x7f61a02f35d0>),\n",
-       " ('F', <pyspark.resultiterable.ResultIterable at 0x7f61a02f38d0>)]"
+       "[('M', <pyspark.resultiterable.ResultIterable at 0x7f569a6fd6d0>),\n",
+       " ('F', <pyspark.resultiterable.ResultIterable at 0x7f569a70a650>)]"
       ]
      },
      "execution_count": 14,
